Insert and finding single keys works. Fixed a number of simple implementation bugs.
Passes Tests thus far.

Todo:
Refactor so serialization to returns the byte array, no longer give the Nodes a cursor. Rather, nodes give and take byte arrays read from the cursor. This way, all cursors stay within the Tree class. This will probably be better when things get more complicated later. Also allows for better testing of the nodes.

Missing:
- Cursor is not returned on search.
- No delete key operation.